--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    
+
     <title>Document</title>
 </head>
 <body>
+    <div class="main">
+        <h1 class="text-light text-center">Social Posts</h1>
+        <div id="post"></div>
+    </div>
     
 
 
@@ -15,3 +24,12 @@
 </html>
 
 
+
+<div class="row">
+    <div class="col-1">
+
+    </div>
+    <div class="col-11"></div>
+</div>
+
+<div>
