--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    
+    <script src="https://kit.fontawesome.com/6ab09c9efe.js" crossorigin="anonymous"></script>
 
     <title>Document</title>
 </head>
@@ -25,11 +25,3 @@
 
 
 
-<div class="row">
-    <div class="col-1">
-
-    </div>
-    <div class="col-11"></div>
-</div>
-
-<div>
